<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.mazeed.smsproject.Activities.LoginActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@mipmap/splash" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line_dashed_gray"
            android:layerType="software" />

        <Button
            android:id="@+id/btnSendFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback" />
    </LinearLayout>
</RelativeLayout>
