<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="co.mazeed.smsproject.Activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    <LinearLayout
        style="@style/ContainerLayout"
        android:layout_below="@id/appBar">


        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/tvUserName"
            style="@style/ButtonFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/purple"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/ButtonFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvMobileNumber"
            style="@style/ButtonFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mobile Number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray4" />

        <TextView
            android:id="@+id/tvRegistredDate"
            style="@style/ButtonFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Registred Since"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/gray3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrentPointsLabel"
                style="@style/ButtonFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_points"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/purple" />

            <TextView
                android:id="@+id/tvCurrentPoints"
                style="@style/ButtonFont"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/purple" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGetPoints"
            style="@style/LoginButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/get_more_points"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            style="@style/LoginDashLine"
            android:layout_width="match_parent"
            android:background="@drawable/line_solid_gray"
            android:layerType="software" />

        <Button
            android:id="@+id/btnSignOut"
            style="@style/LoginButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue1"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/menu_background"
        android:textColor="#FFF"
        app:itemTextColor="#FFF">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/navigation_drawer_header_include"
                layout="@layout/fragment_navigation_drawer" />

            <ListView
                android:id="@+id/navigation_drawer_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/menu_items"
                android:divider="@mipmap/sidebar_dotted_line"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:scrollbars="none"
                android:layout_below="@id/navigation_drawer_header_include"/>

        </RelativeLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>